--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     /* background-color: rgba(0, 0, 0, 0.052); */
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     display: flex;
 }
@@ -45,6 +49,13 @@ body {
 .navItem {
     font-size: 36px;
     font-weight: 600;
+    transition: all 0.4s;
+    cursor: pointer;
+}
+
+.navItem:hover {
+    transform: scale(1.1);
+    text-shadow: 2px 2px black;
 }
 
 .content {
@@ -214,6 +225,11 @@ svg {
     flex-direction: column;
     gap: 4px;
     overflow: scroll;
+    transition: all 1s;
+}
+
+.projectItem:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .itemHeader {
@@ -221,6 +237,7 @@ svg {
     font-weight: 500;
     text-transform: uppercase;
     font-size: 20px;
+    color: black
 }
 
 .itemContent {
